# yoda

./: .gitignore  .ocamlformat  Containerfile  Containerfile.sandbox  Containerfile.yodab  Makefile  README.md  docker-compose.yaml  dune-project  languages.json  languages.yaml  project.opam  test_schema.json  user_schema.json  yoda.opam
.devcontainer/: Containerfile  devcontainer.json  post-create.sh
.github/workflows/: build-sandbox.yml  build-yodab.yml  build-yodac.yml  build.yml
schemas/: AuthToken.json  Contest.json  Problem.json  ScoreboardEntry.json  Solution.json  Submission.json  TestCase.json  User.json  api.json  openapi.yaml  problem_schema.json  scoreboard_schema.json  solution_schema.json  submition_schema.json  types.atd
schemas/atd/: openapi.atd
schemas/json/: AuthToken.json  Solution.json  Submission.json  TestCase.json  YodacConfigGetResponse.json  YodacConfigHistoryEntry.json  YodacConfigHistoryGetResponse.json  YodacConfigPutRequest.json  YodacLanguageConfig.json  YodacLanguagesConfig.json  openapi.json
src/: admin.ml  api.yaml  auth.ml  common.ml  compiler.ml  compiler_v2.ml  config.ml  contests.ml  db.ml  docker_runner.ml  docker_runner_v2.ml  dune  file.ml  helpers.ml  index.eml.ml  index.ml  job.ml  judge.ml  main.ml  openapi.ml  openapi.mli  output.ml  problems.ml  router.ml  submissions.ml  types.ml  types.mli  user.ml  users.eml.ml  users.ml  worker.ml  yodab.ml  yodac.ml
static/: index.html
test/: dune  test_argon2.ml  test_project.ml
tools/: dune  generator.ml  parser.ml  readme.md  schemas.py
tools/atd2dream/: dune  generator.ml  postamble.ml  preamble.ml
tools/convert-openapi/: convert.py  run.sh  schemas.py
