(lang dune 3.20)

(name yoda)


(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(generate_opam_files true)

(package
 (name yoda)
 (depends ocaml dune))



; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
