(library
 (name api_types)
 (wrapped false)
 (modules openapi)
 (libraries yojson))

(library
 (name valkey)
 (wrapped false)
 (modules db)
 (libraries lwt lwt.unix redis-lwt)
 (preprocess
  (pps lwt_ppx)))

(executable
 (public_name yoda)
 (name router)
 (modules router contests auth judge problems submissions users helpers)
 (libraries
  dream
  yojson
  lwt
  lwt.unix
  redis-lwt
  api_types
  valkey
  argon2
  mirage-crypto-rng-lwt)
 (preprocess
  (pps lwt_ppx))
 (flags :standard -cclib -largon2))

(executable
 (public_name yodac)
 (name yodac)
 (modules yodac compiler docker_runner job worker)
 (libraries unix lwt lwt.unix redis-lwt yojson yaml api_types valkey)
 (preprocess
  (pps lwt_ppx)))
