(library
 (name api_types)
 (public_name yoda.api_types)
 (wrapped false)
 (modules openapi)
 (libraries yojson))

(library
 (name valkey)
 (public_name yoda.valkey)
 (wrapped false)
 (modules db)
 (libraries lwt lwt.unix redis-lwt)
 (preprocess
  (pps lwt_ppx)))

(library
 (name helpers)
 (public_name yoda.helpers)
 (wrapped false)
 (modules helpers)
 (libraries api_types valkey lwt lwt.unix redis-lwt dream)
 (preprocess
  (pps lwt_ppx)))

(library
 (name config)
 (public_name yoda.config)
 (wrapped false)
 (modules config)
 (libraries api_types valkey helpers yojson yaml lwt lwt.unix redis-lwt))

(library
 (name yoda_lib)
 (public_name yoda.lib)
 (wrapped false)
 (modules contests auth judge problems submissions users admin)
 (libraries
  api_types
  valkey
  helpers
  config
  dream
  yojson
  lwt
  lwt.unix
  redis-lwt
  argon2
  mirage-crypto-rng-lwt)
 (preprocess
  (pps lwt_ppx))
 (flags :standard -cclib -largon2))

(executable
 (public_name yoda)
 (name router)
 (modules router)
 (libraries yoda_lib)
 (preprocess
  (pps lwt_ppx))
 (flags :standard -cclib -largon2))

(library
 (name yodac_lib)
 (public_name yoda.yodac)
 (wrapped false)
 (modules
  compiler
  docker_runner
  job
  worker
  common)
 (libraries
  api_types
  valkey
  helpers
  config
  unix
  lwt
  lwt.unix
  redis-lwt
  yojson
  docker-api)
 (preprocess
  (pps lwt_ppx)))

(executable
 (public_name yodac)
 (name yodac)
 (modules yodac)
 (libraries yodac_lib)
 (preprocess
  (pps lwt_ppx)))
